force-app/main/default/objects/leankor__LeanConstants__c/leankor__LeanConstants__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting that holds various configuration variables for the Visual Lean system.</description>
    <label>Visual Lean Constants</label>
</CustomObject>