force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__AllowCyclicDependency__c.field-meta.xml
<CustomField>
    <fullName>leankor__AllowCyclicDependency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will allow creation of indirect cyclic dependency.</description>
    <inlineHelpText>This will allow creation of indirect cyclic dependency when this is checked.</inlineHelpText>
    <label>Allow Cyclic Dependency</label>
    <type>Checkbox</type>
</CustomField>