force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__AllowSchedulingConstraints__c.field-meta.xml
<CustomField>
    <fullName>leankor__AllowSchedulingConstraints__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will allow the use of scheduling constraints.</description>
    <inlineHelpText>This will allow the use of scheduling constraints.</inlineHelpText>
    <label>Allow Scheduling Constraints</label>
    <type>Checkbox</type>
</CustomField>