force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__AllowTimeSheet__c.field-meta.xml
<CustomField>
    <fullName>leankor__AllowTimeSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will allow the use of TimeSheet.</description>
    <inlineHelpText>This will allow the use of TimeSheet.</inlineHelpText>
    <label>Allow TimeSheet</label>
    <type>Checkbox</type>
</CustomField>