force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__AutoAssignResourceToActivity__c.field-meta.xml
<CustomField>
    <fullName>leankor__AutoAssignResourceToActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Setting &quot;Auto-Assign Resource to Activity&quot; set OFF (false) so mean creating activity no RA will be create automatically as owner of card and vice versa</description>
    <inlineHelpText>When checked, Leankor will assign a resource to activity when it is created</inlineHelpText>
    <label>Assign Activity Resource</label>
    <type>Checkbox</type>
</CustomField>