force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__AvoidTaskDueDateCheck__c.field-meta.xml
<CustomField>
    <fullName>leankor__AvoidTaskDueDateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the tasks on a Kanban Card may have due dates outside of the card range.</description>
    <inlineHelpText>When checked, the tasks on a Kanban Card may have due dates outside of the card range.</inlineHelpText>
    <label>Avoid Task Due Date Check</label>
    <type>Checkbox</type>
</CustomField>