force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__ChatterUI__c.field-meta.xml
<CustomField>
    <fullName>leankor__ChatterUI__c</fullName>
    <description>UI Types:
LightningChatter - it will show lightning chatter in both classic exp. and lightning exp 
ClassicChatter - it will show classic chatter in both classic exp. and lightning exp with lightningstylesheet 
Auto - it will dynamically change to classic chatter in class exp. and lightning chatter in lightning exp</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The UI to be used for chatter page. Eg:[LightningChatter,ClassicChatter,Auto]</inlineHelpText>
    <label>ChatterUI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>