force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__CloneProjectCustomFieldset__c.field-meta.xml
<CustomField>
    <fullName>leankor__CloneProjectCustomFieldset__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clone Custom Fieldset when setting is true.</inlineHelpText>
    <label>Clone Project Custom Fieldset</label>
    <type>Checkbox</type>
</CustomField>