force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DefaultBoardName__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultBoardName__c</fullName>
    <description>This field stores the default Kanban Board name where inbound emails are routed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the default Kanban Board name where inbound emails are routed.</inlineHelpText>
    <label>Inbound Email Default Board Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>