force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DefaultRoomName__c.field-meta.xml
<CustomField>
    <fullName>leankor__DefaultRoomName__c</fullName>
    <description>This field stores the default Project name in which inbound emails are routed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field stores the default Project name in which inbound emails are routed.</inlineHelpText>
    <label>Inbound Email Default Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>