force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DisableAutoTranslationOfActivity__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableAutoTranslationOfActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable automatic translation of schedule of activity or milestone with linked cards.</description>
    <inlineHelpText>When checked, this will disable the automatic translation of schedule of activity or milestone with linked cards.</inlineHelpText>
    <label>Disable Auto-Translation Of Activity</label>
    <type>Checkbox</type>
</CustomField>