force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DisableCaseTrigger__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableCaseTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this will disable the Leankor trigger on the Case object.</description>
    <inlineHelpText>When checked, this will disable the Leankor trigger on the Case object.</inlineHelpText>
    <label>DisableCaseTrigger</label>
    <type>Checkbox</type>
</CustomField>