force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DisableDateInMyWork__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableDateInMyWork__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the ability to change dates from My Work is disabled.</description>
    <inlineHelpText>When this is checked, the ability of changing dates from My Work is disabled.</inlineHelpText>
    <label>Disable Changing Date In My Work</label>
    <type>Checkbox</type>
</CustomField>