force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DisableKanbanCardShadow__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableKanbanCardShadow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Remove shadow of kanban card while dragging and dropping a card.</inlineHelpText>
    <label>Disable Kanban Card Shadow</label>
    <type>Checkbox</type>
</CustomField>