force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DisableKanbanCardTrigger__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableKanbanCardTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this will disable the Leankor trigger on the Kanban Card object.</description>
    <inlineHelpText>When checked, this will disable the Leankor trigger on the Kanban Card object.</inlineHelpText>
    <label>Disable Kanban Card Trigger</label>
    <type>Checkbox</type>
</CustomField>