force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__DisableOpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>leankor__DisableOpportunityTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this will disable the Leankor trigger on the Opportunity object.</description>
    <inlineHelpText>When checked, this will disable the Leankor trigger on the Opportunity object.</inlineHelpText>
    <label>Disable Opportunity Trigger</label>
    <type>Checkbox</type>
</CustomField>