force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__EffortUnits__c.field-meta.xml
<CustomField>
    <fullName>leankor__EffortUnits__c</fullName>
    <defaultValue>&quot;Days&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The default unit of measure for resource assignment. Eg:[Days,Hours,Minutes,Weeks,Months,Years]</inlineHelpText>
    <label>Activity Effort Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>