force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__EnableFieldSetColumn__c.field-meta.xml
<CustomField>
    <fullName>leankor__EnableFieldSetColumn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this setting is enabled, only the FieldSet fields will be displayed</description>
    <inlineHelpText>When this setting is enabled, only the FieldSet fields will be displayed</inlineHelpText>
    <label>Enable Field Set Column</label>
    <type>Checkbox</type>
</CustomField>