force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__FirstDayOfTheWeek__c.field-meta.xml
<CustomField>
    <fullName>leankor__FirstDayOfTheWeek__c</fullName>
    <defaultValue>1</defaultValue>
    <description>First day of the week in number format. Eg: [0 - Sunday, 1 - Monday, 2 - Tuesday, 3 - Wednesday, 4 - Thursday, 5 - Friday, 6 - Saturday]. Any value not listed in the example will be interpreted as 1.</description>
    <inlineHelpText>First day of the week in number format. Eg: [0 - Sunday, 1 - Monday, 2 - Tuesday, 3 - Wednesday, 4 - Thursday, 5 - Friday, 6 - Saturday]. Any value not listed in the example will be interpreted as 1.</inlineHelpText>
    <label>First Day Of The Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>