force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__FirstInstall__c.field-meta.xml
<CustomField>
    <fullName>leankor__FirstInstall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Leankor has been accessed at least once already. This is used to determine when sample boards are created.</description>
    <inlineHelpText>When checked, Leankor has been accessed at least once already. This is used to determine when sample boards are created.</inlineHelpText>
    <label>FirstInstall</label>
    <type>Checkbox</type>
</CustomField>