force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__InboundEmailSeparator__c.field-meta.xml
<CustomField>
    <fullName>leankor__InboundEmailSeparator__c</fullName>
    <description>This field is used to store a separator between Project Name and Kanban Board Name in the subject line of inbound emails. Default Value &quot; :: &quot; . EX:- ( ProjectName :: BoardName ).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used to store a separator between Project Name and Kanban Board Name in the subject line of inbound emails. Default Value &quot; :: &quot; . EX:- ( ProjectName :: BoardName ).</inlineHelpText>
    <label>Inbound Email Separator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>