force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__InvitePermissionSet__c.field-meta.xml
<CustomField>
    <fullName>leankor__InvitePermissionSet__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>The PermissionSet name to use when new users are created through the invitation feature of leankor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Permission Set name to use when new users are created through the invitation feature of Leankor. For example, Visual_Lean_User and Visual_Lean_Developer are  two examples of PermissionSet names.</inlineHelpText>
    <label>InvitePermissionSet</label>
    <length>80</length>
    <type>Text</type>
</CustomField>