force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__InviteProfile__c.field-meta.xml
<CustomField>
    <fullName>leankor__InviteProfile__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>The profile name to use when new users are created through the invitation feature of leankor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Profile name to use when new users are created through the invitation feature of Leankor. For example, Standard User and System Administrator are two examples of Profile names.</inlineHelpText>
    <label>InviteProfile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>