force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__InviteRole__c.field-meta.xml
<CustomField>
    <fullName>leankor__InviteRole__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>The Role name to use when new users are created through the invitation feature of leankor.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Role name to use when new users are created through the invitation feature of Leankor. For example, CEO and Executive are two examples of Role names.</inlineHelpText>
    <label>InviteRole</label>
    <length>80</length>
    <type>Text</type>
</CustomField>