force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__KanbanBoardScrollSpeed__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanBoardScrollSpeed__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>The value of scrolling speed on Kanban board while dragging and dropping a card.</inlineHelpText>
    <label>Kanban Board Scroll Speed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>