force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__ManuallyScheduled__c.field-meta.xml
<CustomField>
    <fullName>leankor__ManuallyScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to select mode</description>
    <inlineHelpText>The default scheduling mode for the Plan Gantt.</inlineHelpText>
    <label>Activity Manually Scheduled</label>
    <type>Checkbox</type>
</CustomField>