force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__Mode__c.field-meta.xml
<CustomField>
    <fullName>leankor__Mode__c</fullName>
    <defaultValue>&quot;Normal&quot;</defaultValue>
    <description>This field is for schedule mode</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The default scheduling algorithm for the Plan Gantt resources. Eg:[Normal,FixedDuration,EffortDriven,DynamicAssignment]</inlineHelpText>
    <label>Activity Schedule Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>