force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__MyWorkLoadsTasks__c.field-meta.xml
<CustomField>
    <fullName>leankor__MyWorkLoadsTasks__c</fullName>
    <defaultValue>true</defaultValue>
    <description>this value will be true so Task will be show on my work.</description>
    <inlineHelpText>When checked, Leankor will load the Tasks on My Work</inlineHelpText>
    <label>My Work Loads Tasks</label>
    <type>Checkbox</type>
</CustomField>