force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__OverrideDependencyCompletionRule__c.field-meta.xml
<CustomField>
    <fullName>leankor__OverrideDependencyCompletionRule__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When this is checked, task will follow its predecessor when it is 100% completed.</inlineHelpText>
    <label>Override Dependency Completion Rule</label>
    <type>Checkbox</type>
</CustomField>