force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__PointSequence__c.field-meta.xml
<CustomField>
    <fullName>leankor__PointSequence__c</fullName>
    <defaultValue>&quot;[1,2,3,5,8,13,21,34,55,89]&quot;</defaultValue>
    <description>This field is used to set default sequence for all newly created board .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The modified Fibonacci sequence used in Agile story point sizing. Eg: [1,2,3,5,8,13,21,34.....]</inlineHelpText>
    <label>Global Point Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>