force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__PrintingURL__c.field-meta.xml
<CustomField>
    <fullName>leankor__PrintingURL__c</fullName>
    <description>The URL of the print server application that is used for exporting Gantt chart to PDF or PNG file.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The URL of the print server application that is used for exporting Gantt chart to PDF or PNG file.</inlineHelpText>
    <label>Print Server URL</label>
    <type>Url</type>
</CustomField>