force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__RetentionPeriodInDays__c.field-meta.xml
<CustomField>
    <fullName>leankor__RetentionPeriodInDays__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>The retention period (in days) for all soft deleted records</inlineHelpText>
    <label>Retention period in days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>