force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__SevenDayWorkWeek__c.field-meta.xml
<CustomField>
    <fullName>leankor__SevenDayWorkWeek__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Org will work for Seven day Week  make it checked and for Five Day Week make it unchecked.</description>
    <inlineHelpText>When checked, the Plan Gantt and Calendar View of Kanban Boards will assume 7 day work weeks. Unchecked means 5 day work weeks.</inlineHelpText>
    <label>Seven Day Work Week</label>
    <type>Checkbox</type>
</CustomField>