force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__ShowCalendarViewResourceSchedule__c.field-meta.xml
<CustomField>
    <fullName>leankor__ShowCalendarViewResourceSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this will show “Resource Schedule” on Calendar View.</inlineHelpText>
    <label>Show Calendar View Resource Schedule</label>
    <type>Checkbox</type>
</CustomField>