force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__ShowDateOnCardFace__c.field-meta.xml
<CustomField>
    <fullName>leankor__ShowDateOnCardFace__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, this will show the Date on Card Face for (Kanban Board, White board, Rollup board and Dashboard cards)</inlineHelpText>
    <label>Show Date On Card Face</label>
    <type>Checkbox</type>
</CustomField>