force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__ShowIDColumnIndication__c.field-meta.xml
<CustomField>
    <fullName>leankor__ShowIDColumnIndication__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled an indicator shows that a scheduling business rule/constraint is applied.</inlineHelpText>
    <label>Show ID Column Indication</label>
    <type>Checkbox</type>
</CustomField>