force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__ShowImportMSProjectMenu__c.field-meta.xml
<CustomField>
    <fullName>leankor__ShowImportMSProjectMenu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will show &quot;Import MS Project&quot; menu on Plan Gantt.</description>
    <inlineHelpText>When checked, this will show &quot;Import MS Project&quot; menu on Plan Gantt.</inlineHelpText>
    <label>Show Import MS Project Menu</label>
    <type>Checkbox</type>
</CustomField>