force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__StreamingAPIVersion__c.field-meta.xml
<CustomField>
    <fullName>leankor__StreamingAPIVersion__c</fullName>
    <defaultValue>55.0</defaultValue>
    <description>The version of visualforce streaming API to use.</description>
    <inlineHelpText>Enter the version of the Visualforce streaming API.</inlineHelpText>
    <label>Streaming API Version</label>
    <precision>6</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>