force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__SupportURL__c.field-meta.xml
<CustomField>
    <fullName>leankor__SupportURL__c</fullName>
    <description>The URL of Leankor Customer Support.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The URL of Leankor Customer Support.</inlineHelpText>
    <label>Support URL</label>
    <type>Url</type>
</CustomField>