force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__UseCustomLabels__c.field-meta.xml
<CustomField>
    <fullName>leankor__UseCustomLabels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting allows the use of custom labels value in Leankor application.</description>
    <inlineHelpText>When this is checked, it enables the ability to use the strings/values from Custom Labels in Leankor application.</inlineHelpText>
    <label>Use Custom Labels</label>
    <type>Checkbox</type>
</CustomField>