force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__UseGenericStreaming__c.field-meta.xml
<CustomField>
    <fullName>leankor__UseGenericStreaming__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Streaming API enables streaming of events using push technology and provides a subscription mechanism for receiving events in near real time. Streaming API enables streaming of events using push technology and provides a subscription mechanism for receiving events in near real time. The Streaming API subscription mechanism supports multiple types of events, including PushTopic events, generic events, platform events, and Change Data Capture events.

Leankor uses PushTopic or Generic Events for broadcasting messages.</description>
    <inlineHelpText>When this is checked, Generic Events of Streaming API will be used for broadcasting Leankor messages.</inlineHelpText>
    <label>Use Generic Streaming</label>
    <type>Checkbox</type>
</CustomField>