force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__UsePlatformEvent__c.field-meta.xml
<CustomField>
    <fullName>leankor__UsePlatformEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this is checked platform Events will be used for Broadcasting Leankor Messages.</inlineHelpText>
    <label>Use Platform Event</label>
    <type>Checkbox</type>
</CustomField>