force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__WACC__c.field-meta.xml
<CustomField>
    <fullName>leankor__WACC__c</fullName>
    <defaultValue>0.07</defaultValue>
    <description>The Weighted Average Cost of Capital (WACC) for the corporation to be used in Net Present Value (NPV), Discounted Cash Flow (DCF) and other project business case calculations.</description>
    <inlineHelpText>The Weighted Average Cost of Capital (WACC) for the corporation to be used in Net Present Value (NPV), Discounted Cash Flow (DCF) and other project business case calculations.</inlineHelpText>
    <label>WACC</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>