force-app/main/default/objects/leankor__LeanConstants__c/fields/leankor__WorkingHoursPerDay__c.field-meta.xml
<CustomField>
    <fullName>leankor__WorkingHoursPerDay__c</fullName>
    <defaultValue>8</defaultValue>
    <description>working hour per day input - 1 to 24</description>
    <inlineHelpText>default working hours per day is 8</inlineHelpText>
    <label>Working Hours Per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>